TP2/erros.txt
Linker.cpp:3:9: error: redefinition of ‘static Linker& Linker::getInstance()’
 Linker &Linker::getInstance(){
         ^
Linker.hpp:15:17: note: ‘static Linker& Linker::getInstance()’ previously defined here
Linker.cpp: In static member function ‘static void Linker::makeInstance(char*, int)’:
Linker.cpp:11:2: error: invalid use of member ‘Linker::fileName’ in static member function
  fileName = _fileName;
  ^
Linker.hpp:26:11: note: declared here
  static Linker &getInstance();
           ^
Linker.cpp:12:2: error: invalid use of member ‘Linker::capacity’ in static member function
  capacity = _capacity;
  ^
Linker.hpp:28:9: note: declared here
In file included from main.cpp:2:0:
Linker.hpp:24:2: error: expected ‘:’ before ‘static’
  static Linker* instance;
  ^
Linker.hpp:26:2: error: expected ‘:’ before ‘static’
  static Linker &getInstance();
  ^
